feat: prepare permissions framework to new integration roles
In RoleServiceImpl, I remove managing particularity between API and APPLICATION (and new INTEGRATION), we rely on database don't return something with others RoleScope

I rely on groups of integration but this will be implemented with APIM-6136

APIM-6137